Add font awesome support
For use in various UI components

--- a/client/main.html
+++ b/client/main.html
@@ -17,6 +17,9 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<!-- Font Awesome for icon use across the site -->
+<script src="https://use.fontawesome.com/805418f3a0.js"></script>
+
 </head>
 
 <body>
