--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>NVL Guide</title>
+  <title>Natural vs Learned</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
