First round of component tests & refactors
Create smaller components which encapsulate style.
Write tests for the components.

--- a/client/main.html
+++ b/client/main.html
@@ -22,6 +22,9 @@
   <!-- Font Awesome for icon use across the site -->
   <script src="https://use.fontawesome.com/805418f3a0.js"></script>
 
+  <!-- favicon -->
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.png?v=2">
+
 </head>
 
 <body>
