--- a/client/main.html
+++ b/client/main.html
@@ -4,10 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script
-    src="http://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous">
-  </script>
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 
   <!-- Custom Fonts -->
   <link 
